<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp"
    android:id="@+id/display_layout"
    android:background="@color/teal_200"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/guess_the_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/guess_the_day"
        android:textColor="@color/black"
        android:textSize="38sp"
        android:textStyle="bold"
        android:shadowColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/random_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="80dp"
        android:ems="10"
        tools:text="@string/random_date"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radio_options"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/option1"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            tools:text="@string/option_1"/>
        <RadioButton
            android:id="@+id/option2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            tools:text="@string/option_2"/>
        <RadioButton
            android:id="@+id/option3"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            tools:text="@string/option_3"/>
        <RadioButton
            android:id="@+id/option4"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            tools:text="@string/option_4"/>
    </RadioGroup>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_options" />

    <TextView
        android:id="@+id/countDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="186dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="321dp"
        android:textColor="@android:color/black"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_date"
        tools:text="@string/_01_00" />


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>